Skip to content

segmentation fault in freetype

Specs:

debian wheezy(testing)

VLC media player 2.0.4 Twoflower (revision 2.0.3-289-g6e6100a) compiled with debian official repository libraries.

What happens:

When running some portions of a mkv video or starting some videos vlc crashes and with a segmentation fault. The error is repeatable and deterministic.

Back trace:

http://pastebin.com/WS5X32uT

Details:

Upon getting the error I tried using irc to ask for solutions. The user funman directed me into installing vlc from source with debug symbols as to get a backtrace. After posting the trace this is what funman replied:

looks like a bug in freetype ?

funman: the one I used for that gdb backtrace is from the source

which source ?

freetype.c:1793 is 'return p_face; [11:50]

VLC media player 2.0.4 Twoflower (revision 2.0.3-289-g6e6100a)

not strcasecmp(whatever)

:/

then again I compiled it with the libs provided by debian's repositories [11:51]

let me see

gtg [11:52]

ah [11:54]

msl09: maybe just misses an if (p_face->family_name), ask j-b

I was unable to find freetype.c in the source so I could not try to patch the file myself.

To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information