FreeType: fix NULL deref on embedded fonts (fixes #7771)

FT_Face.family_name can be NULL for embedded fonts.

See also http://www.freetype.org/freetype2/docs/reference/ft2-base_interface.html#FT_FaceRec